# swagger2

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  aeson-0.11.cabal.config  cabal.project  stack-7.8.yaml  stack-ghc-8.0.yaml  stack-head.yaml  stack-lts-2.yaml  stack.yaml  swagger2.cabal
.github/workflows/: ci.yml
examples/: hackage.hs
src/Data/: Swagger.hs
src/Data/Swagger/: Declare.hs  Generic.hs  Internal.hs  Lens.hs  Operation.hs  Optics.hs  ParamSchema.hs  Schema.hs  SchemaOptions.hs
src/Data/Swagger/Internal/: AesonUtils.hs  Param.hs  ParamSchema.hs  Schema.hs  TypeShape.hs  Utils.hs
src/Data/Swagger/Internal/Schema/: Validation.hs
src/Data/Swagger/Schema/: Generator.hs  Internal.hs  Validate.hs  Validation.hs
test/: DocTest.hs  SpecCommon.hs
test/Data/: SwaggerSpec.hs
test/Data/Aeson/QQ/: Simple.hs
test/Data/Swagger/: CommonTestTypes.hs  ParamSchemaSpec.hs  SchemaSpec.hs
test/Data/Swagger/Schema/: GeneratorSpec.hs  ValidationSpec.hs
