name:                swagger2
version:             2.1.2.1
synopsis:            Swagger 2.0 data model
description:         Please see README.md
homepage:            https://github.com/GetShopTV/swagger2
bug-reports:         https://github.com/GetShopTV/swagger2/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay@getshoptv.com
copyright:           (c) 2015-2016, GetShopTV
category:            Web
build-type:          Simple
extra-source-files:
    README.md
  , CHANGELOG.md
  , examples/*.hs
  , include/overlapping-compat.h
cabal-version:       >=1.10
tested-with:         GHC==7.8.4, GHC==7.10.3, GHC==8.0.1

library
  hs-source-dirs:      src
  include-dirs:        include
  exposed-modules:
    Data.Swagger
    Data.Swagger.Declare
    Data.Swagger.Lens
    Data.Swagger.Operation
    Data.Swagger.ParamSchema
    Data.Swagger.Schema
    Data.Swagger.Schema.Validation
    Data.Swagger.SchemaOptions

    -- internal modules
    Data.Swagger.Internal
    Data.Swagger.Internal.Schema
    Data.Swagger.Internal.Schema.Validation
    Data.Swagger.Internal.ParamSchema
    Data.Swagger.Internal.Utils
    Data.Swagger.Internal.AesonUtils
  build-depends:       base        >=4.7   && <4.10
                     , base-compat >=0.6.0 && <0.10
                     , aeson
                     , containers
                     , hashable
                     , generics-sop >=0.2 && <0.3
                     , http-media
                     , insert-ordered-containers >=0.1.0.0 && <0.3
                     , lens
                     , mtl
                     , network
                     , scientific
                     , text
                     , template-haskell
                     , time
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
 -- We need aeson's toEncoding for doctests too
  build-depends:    base
                  , base-compat
                  , aeson >=0.10.0.0
                  , aeson-qq
                  , bytestring
                  , containers
                  , hashable
                  , hspec
                  , insert-ordered-containers
                  , HUnit
                  , mtl
                  , QuickCheck
                  , swagger2
                  , text
                  , time
                  , unordered-containers
                  , vector
                  , lens
  other-modules:
    SpecCommon
    Data.SwaggerSpec
    Data.Swagger.ParamSchemaSpec
    Data.Swagger.SchemaSpec
    Data.Swagger.Schema.ValidationSpec
  default-language: Haskell2010

test-suite doctest
  build-depends:    base, doctest, Glob
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          DocTest.hs
  type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/GetShopTV/swagger2.git
