cabal-version:       >=1.10
name:                swagger2
version:             2.8.4

synopsis:            Swagger 2.0 data model
category:            Web, Swagger
description:
  This library is intended to be used for decoding and encoding Swagger 2.0 API
  specifications as well as manipulating them.
  .
  The original Swagger 2.0 specification is available at http://swagger.io/specification/.

homepage:            https://github.com/GetShopTV/swagger2
bug-reports:         https://github.com/GetShopTV/swagger2/issues
license:             BSD3
license-file:        LICENSE
author:              Nickolay Kudasov
maintainer:          nickolay@getshoptv.com
copyright:           (c) 2015-2016, GetShopTV
build-type:          Custom
extra-source-files:
    README.md
  , CHANGELOG.md
  , examples/*.hs
tested-with:
  GHC ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.3

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.6 && <1.1

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Swagger
    Data.Swagger.Declare
    Data.Swagger.Lens
    Data.Swagger.Operation
    Data.Swagger.Optics
    Data.Swagger.ParamSchema
    Data.Swagger.Schema
    Data.Swagger.Schema.Generator
    Data.Swagger.Schema.Validation
    Data.Swagger.SchemaOptions

    -- internal modules
    Data.Swagger.Internal
    Data.Swagger.Internal.Schema
    Data.Swagger.Internal.Schema.Validation
    Data.Swagger.Internal.ParamSchema
    Data.Swagger.Internal.Utils
    Data.Swagger.Internal.AesonUtils
    Data.Swagger.Internal.TypeShape

  -- GHC boot libraries
  build-depends:
      base             >=4.9       && <4.17
    , bytestring       >=0.10.8.1  && <0.12
    , containers       >=0.5.7.1   && <0.7
    , template-haskell >=2.11.1.0  && <2.19
    , time             >=1.6.0.1   && <1.14
    , transformers     >=0.5.2.0   && <0.7

  build-depends:
      mtl              >=2.2.2   && <2.4
    , text             >=1.2.3.0 && <2.1

  -- other dependencies
  build-depends:
      base-compat-batteries     >=0.11.1   && <0.13
    , aeson                     >=2.0.0.0  && <2.1
    , aeson-pretty              >=0.8.7    && <0.9
    -- cookie 0.4.3 is needed by GHC 7.8 due to time>=1.4 constraint
    , cookie                    >=0.4.3    && <0.5
    , generics-sop              >=0.5.1.0  && <0.6
    , hashable                  >=1.2.7.0  && <1.5
    , http-media                >=0.8.0.0  && <0.9
    , insert-ordered-containers >=0.2.3    && <0.3
    , lens                      >=4.16.1   && <5.2
    , network                   >=2.6.3.5  && <3.2
    , optics-core               >=0.2      && <0.5
    , optics-th                 >=0.2      && <0.5
    , scientific                >=0.3.6.2  && <0.4
    , unordered-containers      >=0.2.9.0  && <0.3
    , uuid-types                >=1.0.3    && <1.1
    , vector                    >=0.12.0.1 && <0.13
    , QuickCheck                >=2.10.1   && <2.15

  default-language:    Haskell2010

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs

  -- From library parat
 -- We need aeson's toEncoding for doctests too
  build-depends:
      base
    , swagger2
    , aeson
    , base-compat-batteries
    , bytestring
    , containers
    , hashable
    , insert-ordered-containers
    , lens
    , mtl
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
    , QuickCheck

  -- test-suite only dependencies
  build-depends:
      hspec                >=2.5.5   && <2.9
    , HUnit                >=1.6.0.0 && <1.7
    , quickcheck-instances >=0.3.19  && <0.14
    , utf8-string          >=1.0.1.1 && <1.1

  -- https://github.com/haskell/cabal/issues/3708
  build-tool-depends:
    hspec-discover:hspec-discover >=2.5.5 && <2.9

  other-modules:
    SpecCommon
    Data.SwaggerSpec
    Data.Swagger.CommonTestTypes
    Data.Swagger.ParamSchemaSpec
    Data.Swagger.SchemaSpec
    Data.Swagger.Schema.ValidationSpec
    Data.Swagger.Schema.GeneratorSpec
  default-language: Haskell2010

test-suite doctests
  -- See QuickCheck note in https://github.com/phadej/cabal-doctest#notes
  build-depends:    base, doctest, Glob, QuickCheck
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          doctests.hs
  type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/GetShopTV/swagger2.git
